SCRUM-105 Сделать ручку для получения информации о пользователе
